# pymultieis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: FAQ.rst  batch-fit-vs-sequential-fit.rst  conf.py  examples.rst  extra-resources.rst  getting-started.rst  how-it-works.rst  includeme.rst  index.rst  modules.rst  pymultieis.rst  quick-start-guide.rst  simultaneous-vs-sequential-fit.rst  smoothing-factor-effect.rst  troubleshooting.rst
docs/source/examples/: batch-fit-vs-sequential-fit.ipynb  getting-started.ipynb  intercalation.ipynb  popt_true.npy  redox_exp.ipynb  redox_sim.ipynb  sequential-fit.ipynb  smoothing-factor-effect.ipynb
docs/source/examples/example_results/results/: example_results_Z_pred.npy  example_results_perr.npy  example_results_popt.npy  fit_Z_pred.npy  fit_metrics.txt  fit_perr.npy  fit_popt.npy
docs/source/examples/redox_exp/results/: fit_Z_pred.npy  fit_metrics.txt  fit_perr.npy  fit_popt.npy
docs/source/examples/redox_exp_seq/results/: fit_Z_pred.npy  fit_metrics.txt  fit_perr.npy  fit_popt.npy
src/pymultieis/: __init__.py  multieis.py
tests/: test_multieis.py  test_pymultieis.py
tests/test_results/results/: perr_true.npy  popt_true.npy  test_results_Z_pred.npy  test_results_metrics.txt  test_results_perr.npy  test_results_popt.npy
