[tool.poetry]
name = "pymultieis"
version = "0.1.0"
description = ""
authors = ["Richard Chukwu <richinex@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.4"
scipy = "^1.9.1"
torch = "^1.12.1"
matplotlib = "3.5"
numpy = "1.23.1"
sphinxemoji = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.8.9"
sphinxcontrib-napoleon = "^0.7"
ipykernel = "^6.15.3"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytorch-minimize = {url = "https://test-files.pythonhosted.org/packages/49/d3/ba8743747af15e8298a3c06bdb0cfad58ff09ddd8dc3cd8c9f4d5ff47a37/pytorch_minimize-0.0.1-py3-none-any.whl#sha256=d0d8b234b3c8b712de191dcffa2d06d23a64b1cf66109f378790924f95369422"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
docs = ["toml"]