[tool.poetry]
name = "pymultieis"
version = "0.1.2"
description="A library for fitting a sequence of electrochemical impedance spectra (PyTorch version)."
authors = ["Richard Chukwu <richinex@gmail.com>"]
license="MIT"
maintainers = [
    "Richard Chukwu <richinex@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/richinex/pymultieis"
repository = "https://github.com/richinex/pymultieis"
documentation = "https://pymultieis.readthedocs.io/en/latest/index.html"
keywords = ["electrochemical impedance spectroscopy, eis, batch fitting, multiple spectra, torch"]
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
pandas = "^1.4.4"
scipy = "1.9.3"
torch = "^1.13.0"
matplotlib = "3.5"
numpy = "1.23.1"
pytorch-minimize = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.8.9"
sphinxcontrib-napoleon = "^0.7"
ipykernel = "^6.15.3"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
sphinxemoji = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
docs = ["toml"]